--- a/jenkinsFile
+++ b/jenkinsFile
@@ -18,6 +18,7 @@ pipeline {
                 dir('app') {
                     sh 'yarn'
                     sh 'npm install -g pm2'
+                    sh 'pm2 start pm2Config.js'
                     
                 }
             }
