--- a/jenkinsFile
+++ b/jenkinsFile
@@ -18,8 +18,8 @@ pipeline {
                 dir('app') {
                     sh 'yarn'
                     sh 'npm install -g pm2'
-                    sh 'pm2 start pm2Config.js'
-                    
+                    sh 'pm2 startOrRestart pm2Config.js'
+                    sh 'pm2 save'   
                 }
             }
         }
