--- a/hosts.yml
+++ b/hosts.yml
@@ -2,4 +2,4 @@ webserver:
   hosts:
     51.91.251.65:
       ansible_user: jenkins
-      ansible_ssh_private_key_file: /home/jenkins/.ssh/id_rsa
+      ansible_ssh_private_key_file: /var/lib/jenkins/.ssh/id_rsa
