--- a/hosts.yml
+++ b/hosts.yml
@@ -3,3 +3,4 @@ webserver:
     51.91.251.65:
       ansible_user: jenkins
       ansible_ssh_private_key_file: /var/lib/jenkins/.ssh/id_rsa
+      ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
