change methode to connect #3

--- a/app/hosts.yml
+++ b/app/hosts.yml
@@ -2,4 +2,4 @@ webserver:
   hosts:
     51.91.251.65:
       ansible_user: jenkins
-      ansible_ssh_pass: "{{ lookup('env', 'ANSIBLE_SSH_PASS') }}"
+      ansible_ssh_pass: Naniomasu78@
