change methode to connect #8

--- a/jenkinsFile
+++ b/jenkinsFile
@@ -18,7 +18,8 @@ pipeline {
                 sh 'yarn build'
                 dir('app') {
                     sh 'yarn'
-                    sh 'node index.js' 
+                    sh 'npm install -g pm2'
+                    sh 'pm2 start index.js' 
                 }
             }
         }
