change methode to connect #11

--- a/jenkinsFile
+++ b/jenkinsFile
@@ -19,13 +19,16 @@ pipeline {
                 dir('app') {
                     sh 'yarn'
                     sh 'npm install -g pm2'
-                    sh 'pm2 start index.js' 
+                    sh 'pm2 start index.js'
+                    sh 'pm2 log' 
                 }
             }
         }
         stage('Ansible') {
 
             steps {
+                sh 'nunjucks-precompile ./app/hosts.yml.j2 -o ./app/hosts.js'
+                sh 'node ./app/generate-hosts.js'
                 sh 'ansible-playbook -i ./app/hosts.yml playbook.yml'    
             }
         }
