--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "express-rate-limit": "^6.6.0",
+    "nunjucks": "^3.2.3",
     "password-hash": "^1.2.2",
     "password-validator": "^5.3.0",
     "pg": "^8.8.0",
