--- a/jenkinsFile
+++ b/jenkinsFile
@@ -28,7 +28,7 @@ pipeline {
                 script {
                     def jobName = "MyNewJob_${params.name}"
                     def jobConfig = Jenkins.instance.getItemByFullName(env.JOB_NAME).getConfigFile().asString()
-                    def newJob = Jenkins.instance.copyJob(env.JOB_NAME, jobName)
+                    def newJob = Jenkins.instance.copy(env.JOB_NAME, jobName)
                     newJob.updateByXmlString(jobConfig)
                 }
             }
