--- a/jenkinsFile
+++ b/jenkinsFile
@@ -27,7 +27,7 @@ pipeline {
             steps {
                 script {
                     def jobName = "${env.JOB_NAME}_${params.name}"
-                    def jobConfig = Jenkins.instance.getItemByFullName(env.JOB_NAME).getConfigFile().asString()
+                    def jobConfig = Jenkins.instance.getItem(env.JOB_NAME).getConfigFile().asString()
                     def newJob = Jenkins.instance.copyItem(env.JOB_NAME, jobName)
                     newJob.updateByXmlString(jobConfig)
                 }
