--- a/jenkinsFile
+++ b/jenkinsFile
@@ -1,9 +1,9 @@
+@Library('my-global-library@1.0') _
+
+import org.jenkinsci.plugins.workflow.job.WorkflowJobDSL
 
 pipeline {
     agent any
-
-    @Grab('org.jenkins-ci.plugins:workflow-job:2.39')
-    import org.jenkinsci.plugins.workflow.job.WorkflowJobDSL
     
     tools {
         nodejs 'node18'
@@ -48,7 +48,9 @@ pipeline {
         //         }
         //     }
         // }
+    
     }
+
     
     post {
         success {
