--- a/jenkinsFile
+++ b/jenkinsFile
@@ -1,4 +1,4 @@
-@Library('my-global-library@1.0') _
+@Library('org.jenkinsci.plugins.workflow.job.WorkflowJobDSL') _
 
 import org.jenkinsci.plugins.workflow.job.WorkflowJobDSL
 
