--- a/jenkinsFile
+++ b/jenkinsFile
@@ -1,7 +1,3 @@
-@Library('org.jenkinsci.plugins.workflow.job.WorkflowJobDSL:2.39') _
-
-import org.jenkinsci.plugins.workflow.job.WorkflowJobDSL
-
 pipeline {
     agent any
     
@@ -31,11 +27,21 @@ pipeline {
         stage('Create New Job') {
             steps {
                 script {
-                    def jobName = "${env.JOB_NAME}_${params.name}"
-                    def jobConfig = Jenkins.instance.getItem(env.JOB_NAME).getConfigFile().asString()
-                    def newJob = WorkflowJobDSL.newJob(jobName)
-                    newJob.definition = jobConfig
-                    newJob.save()
+                    def jobName = "${env.JOB_NAME}"
+                    def newName = "${jobName}_${params.name}"
+                    jobDsl scriptText: """
+                        job('${newName}') {
+                            description('Nouveau Job créé par Jenkinsfile')
+                            // Ajouter d'autres propriétés du job ici
+                            properties {
+                                // Définir des propriétés du job ici
+                            }
+                            parameters {
+                                // Définir des paramètres de build ici
+                            }
+                            // Ajouter des étapes de build ici
+                        }
+                    """
                 }
             }
         }
