add permiss script#3

--- a/jenkinsFile
+++ b/jenkinsFile
@@ -27,8 +27,6 @@ pipeline {
         stage('Create New Job') {
             steps {
                 script {
-                    System.setProperty("hudson.security.csrf.DefaultCrumbIssuer.EXCLUDE_SESSION_ID", "true")
-                    System.setProperty("com.cloudbees.plugins.credentials.CredentialsProvider.trackUsage", "false")
                     def jobName = "${env.JOB_NAME}"
                     def newName = "${jobName}_${params.name}"
                     jobDsl scriptText: """
@@ -44,6 +42,8 @@ pipeline {
                             // Ajouter des étapes de build ici
                         }
                     """
+                    scriptApproval.approve(scriptText, "groovy")
+                    jobDsl scriptText: scriptText
                 }
             }
         }
