--- a/jenkinsFile
+++ b/jenkinsFile
@@ -44,7 +44,7 @@ pipeline {
                                 // Ajouter un script shell pour copier le répertoire du job parent
                                 shell "rsync -avz /var/lib/jenkins/workspace/${jobName} /var/lib/jenkins/workspace/${newName}"
                                 // Ouvrir le répertoire copié dans VS Code
-                                sh "code /var/lib/jenkins/workspace/${newName}/${jobName}"
+                                sh "xdg-open /var/lib/jenkins/workspace/${newName}/${jobName}"
                                   
                             }
                         }
