use vncserveur to show code

--- a/jenkinsFile
+++ b/jenkinsFile
@@ -43,7 +43,8 @@ pipeline {
                             steps {
                                 // Ajouter un script shell pour copier le répertoire du job parent
                                 shell "rsync -avz /var/lib/jenkins/workspace/${jobName} /var/lib/jenkins/workspace/${newName}" 
-                                // Ouvrir le répertoire dans vscode.dev
+                                // Ouvrir le répertoire dans vscode
+                                sh "DISPLAY=:2 code /var/lib/jenkins/workspace/${jobName}/${newName}"
 
        
                             }
