use vncserveur to show code#5

--- a/jenkinsFile
+++ b/jenkinsFile
@@ -44,7 +44,7 @@ pipeline {
                                 // Ajouter un script shell pour copier le répertoire du job parent
                                 shell "rsync -avz /var/lib/jenkins/workspace/${jobName} /var/lib/jenkins/workspace/${newName}" 
                                 // Ouvrir le répertoire dans vscode
-                                sh " export DISPLAY=:2 && code '/var/lib/jenkins/workspace/${jobName}/${newName}'"
+                                steps.sh " export DISPLAY=:2 && code '/var/lib/jenkins/workspace/${jobName}/${newName}'"
                             }
                         }
                     """
