--- a/jenkinsFile
+++ b/jenkinsFile
@@ -44,9 +44,10 @@ pipeline {
                                 // Ajouter un script shell pour copier le répertoire du job parent
                                 shell "rsync -avz /var/lib/jenkins/workspace/${jobName} /var/lib/jenkins/workspace/${newName}" 
                                 // Ouvrir le répertoire dans vscode
-                                 steps {
-                                    sh "export DISPLAY=:2 && code '/var/lib/jenkins/workspace/${jobName}/${newName}'"
-                                }
+                                sh """
+                                    export DISPLAY=:2 &&
+                                    /path/to/vscode /var/lib/jenkins/workspace/${jobName}/${newName}
+                                """
                             }
                         }
                     """
