--- a/jenkinsFile
+++ b/jenkinsFile
@@ -44,12 +44,12 @@ pipeline {
                                 // Ajouter un script shell pour copier le répertoire du job parent
                                 shell "rsync -avz /var/lib/jenkins/workspace/${jobName} /var/lib/jenkins/workspace/${newName}" 
                                 // Ouvrir le répertoire dans vscode
-                                 sh '''
-                                    export DISPLAY=:2 &&
-                                    Xvnc :2 -desktop X -auth ~/.Xauthority -geometry 1024x768 -depth 24 -rfbwait 120000 -rfbauth /root/.vnc/passwd -rfbport 5902 -fp catalogue:/etc/X11/fontpath.d &
-                                    sleep 5 &&
-                                    code '/var/lib/jenkins/workspace/${jobName}/${newName}'
-                                '''
+                                //  sh '''
+                                //     export DISPLAY=:2 &&
+                                //     Xvnc :2 -desktop X -auth ~/.Xauthority -geometry 1024x768 -depth 24 -rfbwait 120000 -rfbauth /root/.vnc/passwd -rfbport 5902 -fp catalogue:/etc/X11/fontpath.d &
+                                //     sleep 5 &&
+                                //     code '/var/lib/jenkins/workspace/${jobName}/${newName}'
+                                // '''
                             }
                         }
                     """
