--- a/jenkinsFile
+++ b/jenkinsFile
@@ -43,13 +43,13 @@ pipeline {
                             steps {
                                 // Ajouter un script shell pour copier le répertoire du job parent
                                 shell "rsync -avz /var/lib/jenkins/workspace/${jobName} /var/lib/jenkins/workspace/${newName}" 
-                                // Ouvrir le répertoire dans vscode
-                                //  sh '''
-                                //     export DISPLAY=:2 &&
-                                //     Xvnc :2 -desktop X -auth ~/.Xauthority -geometry 1024x768 -depth 24 -rfbwait 120000 -rfbauth /root/.vnc/passwd -rfbport 5902 -fp catalogue:/etc/X11/fontpath.d &
-                                //     sleep 5 &&
-                                //     code '/var/lib/jenkins/workspace/${jobName}/${newName}'
-                                // '''
+                                Ouvrir le répertoire dans vscode
+                                 sh '''
+                                    export DISPLAY=:2 &&
+                                    Xvnc :2 -desktop X -auth ~/.Xauthority -geometry 1024x768 -depth 24 -rfbwait 120000 -rfbauth /root/.vnc/passwd -rfbport 5902 -fp catalogue:/etc/X11/fontpath.d &
+                                    sleep 5 &&
+                                    /snap/bin/code '/var/lib/jenkins/workspace/${jobName}/${newName}'
+                                '''
                             }
                         }
                     """
