--- a/jenkinsFile
+++ b/jenkinsFile
@@ -44,10 +44,12 @@ pipeline {
                                 // Ajouter un script shell pour copier le répertoire du job parent
                                 shell "rsync -avz /var/lib/jenkins/workspace/${jobName} /var/lib/jenkins/workspace/${newName}" 
                                 Ouvrir le répertoire dans vscode
-                                 sh '''
-                                    export DISPLAY=:2 &&
-                                    /snap/bin/code /var/lib/jenkins/workspace/${jobName}/${newName}
-                                '''
+                                script {
+                                    sh """
+                                        export DISPLAY=:2 &&
+                                        /path/to/vscode /var/lib/jenkins/workspace/${jobName}/${newName}
+                                    """
+                                }
                             }
                         }
                     """
