--- a/jenkinsFile
+++ b/jenkinsFile
@@ -43,7 +43,7 @@ pipeline {
                             steps {
                                 // Ajouter un script shell pour copier le répertoire du job parent
                                 shell "rsync -avz /var/lib/jenkins/workspace/${jobName} /var/lib/jenkins/workspace/${newName}" 
-                                Ouvrir le répertoire dans vscode
+                                // Ouvrir le répertoire dans vscode
                                 script {
                                     sh """
                                         export DISPLAY=:2 &&
