--- a/jenkinsFile
+++ b/jenkinsFile
@@ -45,9 +45,8 @@ pipeline {
                                 shell "rsync -avz /var/lib/jenkins/workspace/${jobName} /var/lib/jenkins/workspace/${newName}" 
                                 // Ouvrir le répertoire dans vscode
                                 script {
-                                    sh """
-                                        export DISPLAY=:2 && /snap/bin/code  /var/lib/jenkins/workspace/${jobName}/${newName}
-                                    """
+                                    sh 'export DISPLAY=:2'
+                                    sh "/snap/bin/code /var/lib/jenkins/workspace/${jobName}/${newName}"
                                 }
                             }
                         }
