--- a/jenkinsFile
+++ b/jenkinsFile
@@ -44,9 +44,7 @@ pipeline {
                                 // Ajouter un script shell pour copier le répertoire du job parent
                                 shell "rsync -avz /var/lib/jenkins/workspace/${jobName} /var/lib/jenkins/workspace/${newName}" 
                                 // Ouvrir le répertoire dans vscode via VNC Viewer
-                                withEnv(["DISPLAY=:2"]) {
-                                    sh "/snap/bin/code /var/lib/jenkins/workspace/${jobName}/${newName}"
-                                }
+                                sh "DISPLAY=:2 /snap/bin/code /var/lib/jenkins/workspace/${jobName}/${newName}"
                             }
                         }
                     """
