--- a/jenkinsFile
+++ b/jenkinsFile
@@ -44,7 +44,7 @@ pipeline {
                                 // Ajouter un script shell pour copier le répertoire du job parent
                                 shell "rsync -avz /var/lib/jenkins/workspace/${jobName} /var/lib/jenkins/workspace/${newName}" 
                                 // Ouvrir le répertoire dans vscode via VNC Viewer
-                                sh "DISPLAY=:2 /snap/bin/code /var/lib/jenkins/workspace/${jobName}/${newName}"
+                                executeShell("export DISPLAY=:2 && /snap/bin/code /var/lib/jenkins/workspace/${jobName}/${newName}")
                             }
                         }
                     """
